# CogniBoiler

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  conftest.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/ai-predictor/: pyproject.toml
apps/alert-manager/: pyproject.toml
apps/api-gateway/: alembic.ini  pyproject.toml
apps/api-gateway/migrations/: env.py
apps/api-gateway/migrations/versions/: 0001_initial_schema.py
apps/api-gateway/src/api_gateway/: config.py  dependencies.py  main.py
apps/api-gateway/src/api_gateway/auth/: jwt_handler.py  password.py  rbac.py
apps/api-gateway/src/api_gateway/models/: user.py
apps/api-gateway/src/api_gateway/routers/: auth.py  commands.py  health.py  status.py  websocket.py
apps/api-gateway/src/api_gateway/schemas/: auth.py  command.py  sensor.py
apps/api-gateway/tests/: test_api_gateway.py  test_models.py
apps/historian/: pyproject.toml
apps/historian/src/historian/: __main__.py  subscriber.py  writer.py
apps/historian/tests/: test_historian.py
apps/opcua-server/: pyproject.toml
apps/opcua-server/src/opcua_server/: __main__.py  address_space.py  server.py  subscriber.py
apps/opcua-server/tests/: test_address_space.py
apps/physics-engine/: pyproject.toml
apps/physics-engine/src/physics_engine/: __main__.py  async_simulator.py  boiler.py  combustion.py  constants.py  controller.py  heat_exchanger.py  models.py  mqtt_publisher.py  pid.py  safety.py  scenarios.py  steam_tables.py  system.py  turbine.py
apps/physics-engine/tests/: test_async_simulator.py  test_boiler.py  test_controller.py  test_mqtt_publisher.py  test_safety.py  test_turbine.py
apps/plc-controller/: pyproject.toml
apps/plc-controller/src/plc_controller/: server.py  service.py
apps/plc-controller/tests/: test_plc_server.py
infrastructure/docker/mosquitto/: mosquitto.conf
infrastructure/grafana/provisioning/datasources/: influxdb.yaml
scripts/: generate_dataset.py  generate_proto.py
shared/: __init__.py
shared/models/: __init__.py  base.py
shared/proto/: cogniboiler.proto
