[project]
name = "cogniboiler"
version = "0.1.0"
description = "AI-Driven Digital Twin Platform for steam boiler and turbine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "dimbo1324", email = "dimaprihodko180@gmail.com" }]
keywords = [
    "digital-twin",
    "industrial-iot",
    "scada",
    "machine-learning",
    "opc-ua"
]
dependencies = []

[tool.uv.workspace]
members = [
    "apps/physics-engine",
    "apps/plc-controller",
    "apps/api-gateway",
    "apps/historian",
    "apps/alert-manager",
    "apps/opcua-server",
    "apps/ai-predictor",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["shared/generated/", "ml/datasets/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"
