[project]
authors = [{name = "dimbo1324", email = "dimaprihodko180@gmail.com"}]
dependencies = []
description = "AI-Driven Digital Twin Platform for steam boiler and turbine"
keywords = [
  "digital-twin",
  "industrial-iot",
  "scada",
  "machine-learning",
  "opc-ua",
]
license = {file = "LICENSE"}
name = "cogniboiler"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.uv.workspace]
members = [
  "apps/physics-engine",
  "apps/plc-controller",
  "apps/api-gateway",
  "apps/historian",
  "apps/alert-manager",
  "apps/opcua-server",
  "apps/ai-predictor",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
  "httpx>=0.27.0",
]

[tool.ruff]
exclude = ["shared/generated"]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
"apps/plc-controller/src/plc_controller/server.py" = ["N802"]

[tool.ruff.lint.isort]
known-first-party = ["shared"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.mypy]
exclude = ["shared/generated/", "ml/datasets/"]
explicit_package_bases = true
ignore_missing_imports = true
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_errors = true
module = ["cogniboiler_pb2", "cogniboiler_pb2_grpc"]

[[tool.mypy.overrides]]
disallow_untyped_decorators = false
module = ["apps.plc-controller.tests.*", "tests.*"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]
