[project]
name = "ai-predictor"
version = "0.1.0"
description = "AI/ML inference service: anomaly detection, efficiency advisor, predictive maintenance"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "influxdb-client>=1.40.0",
    "apscheduler>=3.10.0",
    "mlflow>=2.11.0",
    "pydantic>=2.6.0",
    "structlog>=24.0.0",
    "grpcio>=1.62.0",
    "protobuf>=4.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_predictor"]
