[project]
name = "alert-manager"
version = "0.1.0"
description = "Industrial alarm management and audit logging"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "asyncio-mqtt>=0.16.0",
    "pydantic>=2.6.0",
    "structlog>=24.0.0",
    "grpcio>=1.62.0",
    "protobuf>=4.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alert_manager"]
