[project]
name = "historian"
version = "0.1.0"
description = "Time-series data recorder to InfluxDB"
requires-python = ">=3.12"
dependencies = [
    "influxdb-client>=1.40.0",
    "asyncio-mqtt>=0.16.0",
    "pydantic>=2.6.0",
    "structlog>=24.0.0",
    "protobuf>=4.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/historian"]
