[project]
name = "opcua-server"
version = "0.1.0"
description = "OPC UA server implementing IEC 62541 for field-level integration"
requires-python = ">=3.12"
dependencies = [
    "asyncua>=1.1.0",
    "asyncio-mqtt>=0.16.0",
    "pydantic>=2.6.0",
    "structlog>=24.0.0",
    "protobuf>=4.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opcua_server"]
