[project]
name = "physics-engine"
version = "0.1.0"
description = "Thermodynamic simulation of steam boiler and turbine"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pydantic>=2.6.0",
    "structlog>=24.0.0",
    "asyncio-mqtt>=0.16.0",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/physics_engine"]
