[project]
name = "plc-controller"
version = "0.1.0"
description = "Virtual PLC with cascade PID control"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.0",
    "structlog>=24.0.0",
    "grpcio>=1.62.0",
    "protobuf>=4.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plc_controller"]
